--- a/backup/パネル分析結果（州別）.md
+++ b/backup/パネル分析結果（州別）.md
@@ -2,10 +2,10 @@
 
 |Continent|Country|Count|
 |-|-|-|
-|Asia|Korea, China, Taiwan, Hong Kong, Thailand, Singapore|13|
-||Malaysia, Indonesia, Philippines, Vietnam, India, Israel, Turkey||
-|Europe|United Kingdom, France, Germany, Italy, Russia, Spain, Sweden, Netherlands,|17|
-||Switzerland, Belgium, Finland, Poland, Denmark, Norway, Austria, Portugal, Ireland||
+|Asia|Korea, China, Taiwan, Hong Kong, Thailand, Singapore||
+||Malaysia, Indonesia, Philippines, Vietnam, India, Israel, Turkey|13|
+|Europe|United Kingdom, France, Germany, Italy, Russia, Spain, Sweden, Netherlands,||
+||Switzerland, Belgium, Finland, Poland, Denmark, Norway, Austria, Portugal, Ireland|17|
 |North America|United States, Canada, Mexico|3|
 |Oceania|Australia, New Zealand|2|
 
